# clible

./: .bumpversion.toml  .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: api.py  cli.py  db.py  export.py  main.py  session_manager.py  state.py  status_bar.py  ui.py  utils.py
app/analytics/: analysis_tracker.py  phrase_analysis.py  reading_stats.py  translation_compare.py  visualizations.py  word_frequency.py
app/data/: clible.db
app/db/: queries.py
app/menus/: Untitled  analytics_menu.py  api_menu.py  exports_menu.py  history_menu.py  menu_utils.py  menus.py  session_menu.py
app/validations/: click_params.py  validation_lists.py  validations.py
data/: stop_words.json
data/exports/: Isaiah_53.md
docs/: ANALYSIS_TRACKER_LOGIC.md  ANALYSIS_TRACKER_QUICK_REFERENCE.md  ANALYSIS_TRACKING_INTEGRATION.md  CONVENTIONS_AUDIT.md  FINAL_STATUS.md  FIXES_AND_CONVENTIONS.md  MAX_VERSE_CALCULATION.md  PR_API_CACHE.md  PR_CURRENT_SESSION_FILTER.md  PR_REFACTORING_DESCRIPTION.md  PR_RELEASE_BATCH_0_1_0.md  PR_SESSION_ANALYSIS_FIXES.md  PR_STATUS_BAR_RICH.md  PR_STOP_WORDS_FALLBACK.md  PR_TRANSLATION_COMPARISON.md  PR_TRANSLATION_STATISTICS.md  PR_USER_NAME_IN_ANALYSIS_HISTORY.md  PR_VERSE_DATA_CACHE.md  READY_FOR_MERGE.md  TRANSLATION_COMPARISON_STATISTICS.md  VALIDATION_REFACTORING.md
tests/: test_analysis_tracker.py  test_analysis_tracker_user_name.py  test_api_cache.py  test_api_menu.py  test_api_rate_limiting.py  test_database_reset.py  test_export.py  test_fetch_by_reference.py  test_parse_selection_range.py  test_session_manager.py  test_session_queries.py  test_translation_compare.py  test_translation_compare_bug_fix.py  test_translation_compare_stats.py  test_user_queries.py  test_validations.py  test_visualizations.py  test_word_frequency.py
