[project]
name = "clible"
version = "0.1.0"
description = "CLI tool for Bible studies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "pytest>=9.0.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
clible = "app.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
