[project]
name = "clible"
version = "0.1.0"
description = "CLI tool for Bible studies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "docker>=7.1.0",
    "go-task-bin>=3.45.5",
    "loguru>=0.7.3",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "plotext>=5.2.8",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
clible = "app.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
