[project]
name = "clible"
version = "0.1.0"
authors = [
    {name = "clible contributors"}
]
description = "CLI tool for Bible studies"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.3.1",
    "docker>=7.1.0",
    "go-task-bin>=3.45.5",
    "loguru>=0.7.3",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "plotext>=5.2.8",
    "matplotlib>=3.10.0",
    "simple-term-menu>=1.6.6",
    "bump2version>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/mvirtai/clible"
Issues = "https://github.com/mvirtai/clible/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.scripts]
clible = "app.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
